--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.3.0",
+    "@react-navigation/native": "^5.5.1",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
