--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/react-native": "^3.3.0",
     "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.4.2",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
