--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ant-design/react-native": "^3.3.0",
+    "@react-native-community/cameraroll": "^1.7.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.1",
+    "@react-native-community/segmented-control": "^2.0.0",
+    "@react-native-community/slider": "^3.0.0",
+    "@react-native-community/viewpager": "^4.0.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
