--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@react-native-community/viewpager": "^4.0.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "@types/react-native-vector-icons": "^6.4.5",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
-    "react-native-screens": "^2.8.0"
+    "react-native-screens": "^2.8.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
