--- a/package.json
+++ b/package.json
@@ -10,21 +10,31 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/cameraroll": "^1.7.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.1",
     "@react-native-community/segmented-control": "^2.0.0",
     "@react-native-community/slider": "^3.0.0",
     "@react-native-community/viewpager": "^4.0.0",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@unimodules/core": "^5.3.0",
+    "expo": "^38.0.4",
+    "expo-asset": "~8.1.7",
+    "expo-constants": "~9.1.1",
+    "expo-file-system": "~9.0.1",
+    "expo-font": "^8.2.1",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
