--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/picker": "^1.6.1",
     "@react-native-community/segmented-control": "^2.0.0",
     "@react-native-community/slider": "^3.0.0",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-community/viewpager": "^4.0.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
@@ -25,6 +26,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-input-spinner": "^1.2.14",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
