--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@react-native-community/segmented-control": "^2.0.0",
     "@react-native-community/slider": "^3.0.0",
     "@react-native-community/viewpager": "^4.0.0",
+    "@react-navigation/material-bottom-tabs": "^5.2.12",
+    "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "@types/react-native-input-spinner": "^1.2.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "native-base": "^2.13.12",
     "react": "16.11.0",
@@ -25,9 +28,12 @@
     "react-native-animatable": "^1.3.3",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-input-spinner": "^1.2.14",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
