--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/react-native-input-spinner": "^1.2.0",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@types/react-redux": "^7.1.9",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -35,7 +37,8 @@
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-tab-view": "^2.14.4",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
