--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "^3.0.0",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-community/viewpager": "^4.0.0",
+    "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/material-top-tabs": "^5.2.12",
     "@react-navigation/native": "^5.5.1",
@@ -30,6 +31,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-input-spinner": "^1.2.14",
