--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/material-top-tabs": "^5.2.12",
-    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.4.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/react-native-input-spinner": "^1.2.0",
@@ -35,6 +35,7 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-input-spinner": "^1.2.14",
+    "react-native-movable-view": "^1.0.3",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
