--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/slider": "^3.0.0",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-native-community/viewpager": "^4.0.0",
+    "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/drawer": "^5.8.5",
     "@react-navigation/material-bottom-tabs": "^5.2.12",
     "@react-navigation/material-top-tabs": "^5.2.12",
@@ -35,7 +36,6 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-input-spinner": "^1.2.14",
-    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
