--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-input-spinner": "^1.2.14",
+    "react-native-momosdk": "^1.3.4",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-swipe-list-view": "^3.2.3",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0"
