--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/react-native-input-spinner": "^1.2.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^3.5.0",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
