--- a/package.json
+++ b/package.json
@@ -38,14 +38,13 @@
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-input-spinner": "^1.2.14",
-<<<<<<< HEAD
-    "react-native-paper": "^4.0.1",
-=======
     "react-native-momosdk": "^1.3.4",
->>>>>>> e7fd94a5edbf94d97d748b65b82acd78b8a13fc8
+    "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-swipe-list-view": "^3.2.3",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
